--- a/pwa/src/app/auth/login/login.component.html
+++ b/pwa/src/app/auth/login/login.component.html
@@ -1,3 +1,13 @@
+<div class="progress" [hidden]="!(isLoading$ | async)">
+    Loading
+</div>
+
 <input type="text" [(ngModel)]="user.email">
 <input type="password" [(ngModel)]="user.password">
 <input type="text" [(ngModel)]="user.username">
+
+<button class="btn" (click)="login()">Login</button>
+
+<div class="error" *ngIf="error$ | async">
+    Email or Password are not valid
+</div>
