--- a/pwa/src/app/auth/login/login.component.html
+++ b/pwa/src/app/auth/login/login.component.html
@@ -2,9 +2,8 @@
     Loading
 </div>
 
-<input type="text" [(ngModel)]="user.email">
+<input type="email" [(ngModel)]="user.email">
 <input type="password" [(ngModel)]="user.password">
-<input type="text" [(ngModel)]="user.username">
 
 <button class="btn" (click)="login()">Login</button>
 
